--- a/pinegrow/index.html
+++ b/pinegrow/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
         <title>New page</title>
@@ -68,14 +69,14 @@
                                             <span class="text-size--x-large">%</span>
                                             <span class="rounded-full text-white text-size--small bg-green py-1 px-2">32%</span>
                                         </div>
-                                        <div data-pg-name="data-group__chart">
+                                        <div data-pg-name="data-group__chart" class="layout-block">
                                             <p>Chart</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="w-100 w-full md:w-1/3 p-2" data-pg-name="panel__grid-item">
                                     <div data-pg-name="data-group" class="mb-4">
-                                        <div>CPU Allocation</div>
+                                        <div>Memory Allocation</div>
                                         <div class="text-size--large">83%
                                             <span class="rounded-full text-white text-size--small bg-green py-1 px-2">32%</span>
                                         </div>
@@ -84,7 +85,7 @@
                                         </div>
                                     </div>
                                     <div data-pg-name="data-group">
-                                        <div>CPU Allocation</div>
+                                        <div>Disk Allocation</div>
                                         <div class="text-size--large">83%
                                             <span class="rounded-full text-white text-size--small bg-green py-1 px-2">32%</span>
                                         </div>
@@ -100,23 +101,26 @@
                         <div class="rounded bg-grey" data-pg-name="panel">
                             <div class="md:flex">
                                 <div class="md:w-1/2 flex">
-                                    <div>Chart</div>
-                                    <div class="text-size--jumbo">28</div>
-                                    <div class="text-size--small">Total
-                                        <br>Services
+                                    <div class="flex" data-pg-name="data-group--inline">
+                                        <div>Chart</div>
+                                        <div class="text-size--jumbo">28</div>
+                                        <div class="text-size--small">Total
+                                            <br>Services
+                                        </div>
                                     </div>
-                                    <br/>
                                 </div>
                                 <div class="md:w-1/2 flex">
                                     <div class="w-1/3">
-                                        <div class="text-center text-size--x-large">21</div>
-                                        <div class="text-center text-size--small">Active</div>
+                                        <div data-pg-name="data-group">
+                                            <div class="text-center text-size--x-large">21</div>
+                                            <div class="text-center text-size--small">Active</div>
+                                        </div>
                                     </div>
-                                    <div class="w-1/3">
+                                    <div class="w-1/3 border-l">
                                         <div class="text-center text-size--x-large">7</div>
                                         <div class="text-center text-size--small">Idle</div>
                                     </div>
-                                    <div class="w-1/3">
+                                    <div class="w-1/3 border-l">
                                         <div class="text-center text-size--x-large">1</div>
                                         <div class="text-center text-size--small">Stressed</div>
                                     </div>
@@ -125,46 +129,46 @@
                             <div class="text-center my-4 uppercase text-size--tiny">Most Active Services</div>
                             <div class="md:flex">
                                 <div class="md:w-1/2">
-                                    <div class="layout-block flex items-start">
+                                    <div class="layout-block flex items-start" data-pg-name="data-group-media">
                                         <img src="https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjIwOTIyfQq=85&fm=jpg&crop=faces&cs=srgb&w=50&h=50&fit=crop" class="rounded"/>
-                                        <div class="ml-2">
+                                        <div class="ml-2" data-pg-name="data-group-media__content">
                                             <div class="text-size--small">Marathon (Dev)</div>
                                             <div class="text-size--xx-small">Active (247 Tasks)</div>
                                         </div>
                                     </div>
-                                    <div class="layout-block flex items-start">
+                                    <div class="layout-block flex items-start" data-pg-name="data-group-media">
                                         <img src="https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjIwOTIyfQq=85&fm=jpg&crop=faces&cs=srgb&w=50&h=50&fit=crop" class="rounded"/>
-                                        <div class="ml-2">
+                                        <div class="ml-2" data-pg-name="data-group-media__content">
                                             <div class="text-size--small">Marathon (Dev)</div>
                                             <div class="text-size--xx-small">Active (247 Tasks)</div>
                                         </div>
                                     </div>
-                                    <div class="layout-block flex items-start">
+                                    <div class="layout-block flex items-start" data-pg-name="data-group-media">
                                         <img src="https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjIwOTIyfQq=85&fm=jpg&crop=faces&cs=srgb&w=50&h=50&fit=crop" class="rounded"/>
-                                        <div class="ml-2">
+                                        <div class="ml-2" data-pg-name="data-group-media__content">
                                             <div class="text-size--small">Marathon (Dev)</div>
                                             <div class="text-size--xx-small">Active (247 Tasks)</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="md:w-1/2">
-                                    <div class="layout-block flex items-start">
+                                    <div class="layout-block flex items-start" data-pg-name="data-group-media">
                                         <img src="https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjIwOTIyfQq=85&fm=jpg&crop=faces&cs=srgb&w=50&h=50&fit=crop" class="rounded"/>
-                                        <div class="ml-2">
+                                        <div class="ml-2" data-pg-name="data-group-media__content">
                                             <div class="text-size--small">Marathon (Dev)</div>
                                             <div class="text-size--xx-small">Active (247 Tasks)</div>
                                         </div>
                                     </div>
-                                    <div class="layout-block flex items-start">
+                                    <div class="layout-block flex items-start" data-pg-name="data-group-media">
                                         <img src="https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjIwOTIyfQq=85&fm=jpg&crop=faces&cs=srgb&w=50&h=50&fit=crop" class="rounded"/>
-                                        <div class="ml-2">
+                                        <div class="ml-2" data-pg-name="data-group-media__content">
                                             <div class="text-size--small">Marathon (Dev)</div>
                                             <div class="text-size--xx-small">Active (247 Tasks)</div>
                                         </div>
                                     </div>
-                                    <div class="layout-block flex items-start">
+                                    <div class="layout-block flex items-start" data-pg-name="data-group-media">
                                         <img src="https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjIwOTIyfQq=85&fm=jpg&crop=faces&cs=srgb&w=50&h=50&fit=crop" class="rounded"/>
-                                        <div class="ml-2">
+                                        <div class="ml-2" data-pg-name="data-group-media__content">
                                             <div class="text-size--small">Marathon (Dev)</div>
                                             <div class="text-size--xx-small">Active (247 Tasks)</div>
                                         </div>
@@ -176,14 +180,14 @@
                 </div>
                 <div class="flex flex-wrap -mx-2" data-pg-name="grid">
                     <div class="w-100 w-full md:w-1/3 p-2" data-pg-name="grid__item">
-                        <div class="h-full bg-grey rounded">
-                            <div class="layout-block">Chart</div>
+                        <div class="h-full rounded bg-grey-darker" data-pg-name="panel">
+                            <div class="layout-block" data-pg-name="chart-container">Chart</div>
                             <div class="flex">
-                                <div class="w-1/2 layout-block">
+                                <div class="w-1/2">
                                     <div class="text-center text-size--x-large">23.6 </div>
                                     <div class="text-center text-size--small">Active Task</div>
                                 </div>
-                                <div class="w-1/2 layout-block">
+                                <div class="w-1/2 border-l">
                                     <div class="text-center text-size--x-large">139</div>
                                     <div class="text-center text-size--small">Pending Tasks</div>
                                 </div>
