Refactor: Polishing up css Class rules

--- a/pinegrow/index.html
+++ b/pinegrow/index.html
@@ -45,13 +45,13 @@
                     <a data-pg-name="dashboard__menu-link" class="dashboard__menu-link">Overview</a>
                 </li>
                 <li class="flex-auto md:flex-initial text-size--small">
-                    <a class="block border-solid hover:border-blue mr-2 py-2 text-white border-b-4 border-grey-darkest">Overview</a>
+                    <a class="dashboard__menu-link">Overview</a>
                 </li>
                 <li class="flex-auto md:flex-initial text-size--small">
-                    <a class="block border-solid hover:border-blue mr-2 py-2 text-white border-b-4 border-grey-darkest">Overview</a>
+                    <a class="dashboard__menu-link">Overview</a>
                 </li>
                 <li class="flex-auto md:flex-initial text-size--small">
-                    <a class="block border-solid hover:border-blue mr-2 py-2 text-white border-b-4 border-grey-darkest">Overview</a>
+                    <a class="dashboard__menu-link">Overview</a>
                 </li>
             </ul>
             <div data-pg-name="grid" class="grid">
@@ -99,7 +99,7 @@
                 <div data-pg-name="grid__item" class="grid__item grid__item--half">
                     <div data-pg-name="panel" class="panel">
                         <div data-pg-name="panel__grid" class="panel__grid">
-                            <div data-pg-name="panel__grid-item" class="panel__grid-item panel__grid-item--half">
+                            <div data-pg-name="panel__grid-item" class="panel__grid-item flex-1">
                                 <div data-pg-name="data-group--inline" class="data-group--inline">
                                     <div>Chart</div>
                                     <div class="text-size--jumbo">28</div>
@@ -109,17 +109,17 @@
                                 </div>
                             </div>
                             <div data-pg-name="panel__grid-item" class="panel__grid-item panel__grid panel__grid-item--half">
-                                <div class="w-1/3">
+                                <div class="panel__grid-item--third">
                                     <div data-pg-name="data-group" class="data-group">
                                         <div class="text-center text-size--x-large">21</div>
                                         <div class="text-center text-size--small text-color--dark-mint-green">Active</div>
                                     </div>
                                 </div>
-                                <div class="w-1/3 border-l">
+                                <div class="panel__grid-item--third panel__grid-item--border-left flex flex-col justify-center">
                                     <div class="text-center text-size--x-large">7</div>
                                     <div class="text-center text-size--small text-color--basalt-grey">Idle</div>
                                 </div>
-                                <div class="w-1/3 border-l">
+                                <div class="panel__grid-item--third panel__grid-item--border-left">
                                     <div class="text-center text-size--x-large">1</div>
                                     <div class="text-center text-size--small text-color--neon-fuchsia">Stressed</div>
                                 </div>
